package EXERCICIO.LISTA4.GestaodeTarefas;

public class Usuario {
    private String nome;
    private String email;

    public Usuario(String nome, String email) {
        this.nome = nome;
        this.email = email;
    }
}
